--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rotel-ctrl",
   "version": "0.1.0",
   "license": "MIT",
-  "author": "Claudio Quaglia",
+  "author": "Claudio Quaglia <cluadio.quaglia@codemania.it>",
   "main": "dist/index.js",
   "module": "dist/rotel-ctrl.esm.js",
   "typings": "dist/index.d.ts",
@@ -34,14 +34,16 @@
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.24",
+    "@types/mitm": "^1.3.2",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "debug": "^4.1.1",
     "husky": "^3.1.0",
+    "mitm": "^1.7.0",
     "standard-version": "^7.0.1",
     "tsdx": "^0.12.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.4"
   },
   "dependencies": {},
   "config": {
